@@ -29,7 +29,7 @@ import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.util.FeatureFlags;
 import org.thoughtcrime.securesms.util.Stopwatch;
-import org.thoughtcrime.securesms.util.TextSecurePreferences;
+import org.thoughtcrime.securesms.util.Util;
 import org.thoughtcrime.securesms.util.ViewUtil;
 import org.thoughtcrime.securesms.util.concurrent.SimpleTask;
 import org.thoughtcrime.securesms.util.views.SimpleProgressDialog;
@@ -39,6 +39,9 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
+import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 public class CreateGroupActivity extends ContactSelectionActivity {
 
@@ -56,8 +59,8 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     intent.putExtra(ContactSelectionListFragment.REFRESHABLE, false);
     intent.putExtra(ContactSelectionActivity.EXTRA_LAYOUT_RES_ID, R.layout.create_group_activity);
 
-    int displayMode = TextSecurePreferences.isSmsEnabled(context) ? ContactsCursorLoader.DisplayMode.FLAG_SMS | ContactsCursorLoader.DisplayMode.FLAG_PUSH
-                                                                  : ContactsCursorLoader.DisplayMode.FLAG_PUSH;
+    int displayMode = Util.isDefaultSmsProvider(context) ? ContactsCursorLoader.DisplayMode.FLAG_SMS | ContactsCursorLoader.DisplayMode.FLAG_PUSH
+                                                         : ContactsCursorLoader.DisplayMode.FLAG_PUSH;
 
     intent.putExtra(ContactSelectionListFragment.DISPLAY_MODE, displayMode);
     intent.putExtra(ContactSelectionListFragment.SELECTION_LIMITS, FeatureFlags.groupLimits().excludingSelf());
@@ -97,24 +100,34 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   }
 
   @Override
-  public boolean onBeforeContactSelected(Optional<RecipientId> recipientId, String number) {
+  public void onBeforeContactSelected(Optional<RecipientId> recipientId, String number, Consumer<Boolean> callback) {
     if (contactsFragment.hasQueryFilter()) {
-      getToolbar().clear();
+      getContactFilterView().clear();
     }
 
     shrinkSkip();
 
-    return true;
+    callback.accept(true);
   }
 
   @Override
   public void onContactDeselected(Optional<RecipientId> recipientId, String number) {
     if (contactsFragment.hasQueryFilter()) {
-      getToolbar().clear();
+      getContactFilterView().clear();
     }
 
     if (contactsFragment.getSelectedContactsCount() == 0) {
       extendSkip();
+    }
+  }
+
+  @Override
+  public void onSelectionChanged() {
+    int selectedContactsCount = contactsFragment.getTotalMemberCount();
+    if (selectedContactsCount == 0) {
+      getToolbar().setTitle(getString(R.string.CreateGroupActivity__select_members));
+    } else {
+      getToolbar().setTitle(getResources().getQuantityString(R.plurals.CreateGroupActivity__d_members, selectedContactsCount, selectedContactsCount));
     }
   }
 
@@ -153,17 +166,18 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     SimpleProgressDialog.DismissibleDialog dismissibleDialog = SimpleProgressDialog.showDelayed(this);
 
     SimpleTask.run(getLifecycle(), () -> {
-      List<RecipientId> ids = Stream.of(contactsFragment.getSelectedContacts())
-                                    .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
-                                    .toList();
+      List<RecipientId> ids = contactsFragment.getSelectedContacts()
+                                              .stream()
+                                              .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
+                                              .collect(Collectors.toList());
 
       List<Recipient> resolved = Recipient.resolvedList(ids);
 
       stopwatch.split("resolve");
 
-      List<Recipient> registeredChecks = Stream.of(resolved)
-                                               .filter(r -> r.getRegistered() == RecipientDatabase.RegisteredState.UNKNOWN)
-                                               .toList();
+      Set<Recipient> registeredChecks = resolved.stream()
+                                                .filter(r -> r.getRegistered() == RecipientDatabase.RegisteredState.UNKNOWN)
+                                                .collect(Collectors.toSet());
 
       Log.i(TAG, "Need to do " + registeredChecks.size() + " registration checks.");
 
@@ -175,22 +189,31 @@ public class CreateGroupActivity extends ContactSelectionActivity {
         }
       }
 
+      if (registeredChecks.size() > 0) {
+        resolved = Recipient.resolvedList(ids);
+      }
+
       stopwatch.split("registered");
 
       List<Recipient> recipientsAndSelf = new ArrayList<>(resolved);
       recipientsAndSelf.add(Recipient.self().resolve());
 
+      boolean neededRefresh = false;
+
       if (!SignalStore.internalValues().gv2DoNotCreateGv2Groups()) {
         try {
-          GroupsV2CapabilityChecker.refreshCapabilitiesIfNecessary(recipientsAndSelf);
+          neededRefresh = GroupsV2CapabilityChecker.refreshCapabilitiesIfNecessary(recipientsAndSelf);
         } catch (IOException e) {
           Log.w(TAG, "Failed to refresh all recipient capabilities.", e);
         }
       }
 
+      if (neededRefresh) {
+        resolved = Recipient.resolvedList(ids);
+      }
+
       stopwatch.split("capabilities");
 
-      resolved = Recipient.resolvedList(ids);
 
       Pair<Boolean, List<RecipientId>> result;
 
